src/core/snapshots/vue_template_compiler__core__parser__test__test-16.snap
---
source: src/core/parser.rs
expression: ast

---
children:
  - Plain:
      tag_name: p
      namespace: Html
      properties:
        - Attr:
            name: v-
            value:
              content:
                raw: tt
                ops:
                  bits: 10
              location:
                start:
                  offset: 6
                  line: 1
                  column: 7
                end:
                  offset: 10
                  line: 1
                  column: 11
            name_loc:
              start:
                offset: 3
                line: 1
                column: 4
              end:
                offset: 5
                line: 1
                column: 6
            location:
              start:
                offset: 3
                line: 1
                column: 4
              end:
                offset: 10
                line: 1
                column: 11
      children: []
      location:
        start:
          offset: 0
          line: 1
          column: 1
        end:
          offset: 12
          line: 1
          column: 13
location:
  start:
    offset: 0
    line: 1
    column: 1
  end:
    offset: 12
    line: 1
    column: 13

