src/core/snapshots/vue_template_compiler__core__parser__test__test-18.snap
---
source: src/core/parser.rs
expression: ast

---
children:
  - Plain:
      tag_name: p
      namespace: Html
      properties:
        - Attr:
            name: v-.
            value:
              content:
                raw: tt
                ops:
                  bits: 10
              location:
                start:
                  offset: 7
                  line: 1
                  column: 8
                end:
                  offset: 11
                  line: 1
                  column: 12
            name_loc:
              start:
                offset: 3
                line: 1
                column: 4
              end:
                offset: 6
                line: 1
                column: 7
            location:
              start:
                offset: 3
                line: 1
                column: 4
              end:
                offset: 11
                line: 1
                column: 12
      children: []
      location:
        start:
          offset: 0
          line: 1
          column: 1
        end:
          offset: 13
          line: 1
          column: 14
location:
  start:
    offset: 0
    line: 1
    column: 1
  end:
    offset: 13
    line: 1
    column: 14

